--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
+    "router-dom": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
