--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "cors": "^2.8.5",
     "docker": "^1.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
@@ -29,5 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
+
 }
