--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "cors": "^2.8.5",
-    "docker": "^1.0.0",
+    "docker": "^0.2.14",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
@@ -32,5 +33,4 @@
     "vite": "^6.2.0"
   },
   "proxy": "http://localhost:3000"
-
 }
