--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "docker": "^0.2.14",
     "jwt-decode": "^3.1.2",
@@ -19,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
-    "router-dom": "^3.0.3"
+    "router-dom": "^3.0.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
