--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^3.32.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
