--- a/VBWEB/frontend/package.json
+++ b/VBWEB/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@daypilot/daypilot-lite-react": "^3.33.1",
     "@supabase/supabase-js": "^2.49.4",
+    "animated-backgrounds": "^1.1.0",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "docker": "^0.2.14",
